--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -9,6 +9,18 @@
 
 <!-- This handles all the strings in the app. -->
 <resources>
+    <!-- Dhis strings -->
+    <string name="dhis_settings">Dhis settings</string>
+    <!-- username setting -->
+    <string name="dialog_title_username">Username</string>
+    <string name="edittxt_username_summary">Username needed to post to dhis server</string>
+    <string name="edittxt_username_title">Username</string>
+    <!-- Password setting -->
+    <string name="dialog_title_password">Password</string>
+    <string name="edittxt_password_summary">Password needed to post to dhis server</string>
+    <string name="edittxt_password_title">Password</string>
+    
+    <!-- Other strings -->
 	<string name="edittxt_website_pref">Enter The Sync URL</string>
 	<string name="edittxt_website_pref_summary">This is the website that will receive the text
 		messages.</string>
