Now the widget shows meaningful information + fixed date bug.

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -11,6 +11,7 @@
 <resources>
     <!-- Dhis strings -->
     <string name="dhis_settings">Dhis settings</string>
+    <string name="dhis_namelookup_failed">Failed to lookup form name!</string>
     
     <!-- login setting -->
     <string name="dialog_title_login">Login</string>
